--- a/.github/workflows/.appveyor.yml
+++ b/.github/workflows/.appveyor.yml
@@ -6,7 +6,8 @@ branches:
   only:
     - master  # ветка git
 
-build: off  # будем использовать свой скрипт сборки
+build: 
+- chmod +x gradlew
 
 install:
   # Запускаем SUT,
