--- a/.appveyor.yml.gradle
+++ b/.appveyor.yml.gradle
@@ -1,23 +1,14 @@
-image: Ubuntu2004  # образ для сборки
-
-stack: jdk 11  # версия JDK
+image: Ubuntu2004
+stack: jdk 11
 
 branches:
-  only:
-    - master  # ветка git
+only:
+- main
 
-build: off  # будем использовать свой скрипт сборки
-
+build: off
 install:
-  # Запускаем SUT,
-  # имя файла SUT будет отличаться в каждой задаче.
-  # & означает, что в фоновом режиме не блокируем терминал для запуска тестов, 
-  # обязательно должен быть для запуска SUT в CI
-  - java -jar ./artifacts/app-mbank.jar &
-  - chmod +x gradlew
+- java -jar ./artifacts/app-mbank.jar &
+        - chmod +x gradlew
 
 build_script:
-  # Запускаем автотесты
-  # Для проектов на базе Selenide необходимо добавить параметр для запуска браузера
-  # в headless режиме -Dselenide.headless=true, параметр --info должен остаться
-  - ./gradlew test --info
+- ./gradlew test --info
